--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.7"
     // RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    // RxRelay
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.0'
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.9.0"
