--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     // RxRelay
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.0'
+    // RxKotlin
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.9.0"
